--- a/UWMadison2016/PIPS_examples/stochpdegas_PIPS.ipynb
+++ b/UWMadison2016/PIPS_examples/stochpdegas_PIPS.ipynb
@@ -130,60 +130,60 @@
    "source": [
     "function createGasModel(SCEN)\n",
     "         m = Model(solver=IpoptSolver())\n",
-    "         @defVar(m, nodeDict[j].pmin<=p[SCEN, j in NODE, TIMEG]<=nodeDict[j].pmax, start= 50)             # node pressure - [bar]\n",
-    "         #@defVar(m, 0<=dp[SCEN, j = LINK,  TIMEG; linkDict[j].ltype == \"a\"]<=100, start= 10)             # compressor boost - [bar]\n",
-    "         @defVar(m, dp[SCEN, j = LINK,  TIMEG; linkDict[j].ltype == \"a\"], start= 10)                      # compressor boost - [bar]\n",
-    "         @defVar(m, 1<=fin[SCEN, LINK, TIMEG]<=500, start= 100)                                           # flow in pipe - [scmx10-4/hr]\n",
-    "         @defVar(m, 1<=fout[SCEN, LINK, TIMEG]<=500, start= 100)                                          # flow out pipe - [scmx10-4/hr]\n",
-    "         @defVar(m, 0.01<=sG[SCEN, j in SUP, TIMEG]<=supDict[j].max, start = 10)                          # supply flow - [scmx10-4/hr]\n",
-    "         @defVar(m, dem[SCEN, DEM, TIMEG],    start=100)                                                  # demand flow - [scmx10-4/hr]\n",
-    "         @defVar(m, 0<=pow[SCEN, j = LINK, TIMEG; linkDict[j].ltype == \"a\"]<=3000, start= 1000)           # compressor power - [kW]\n",
-    "         @defVar(m, slack[SCEN, LINK, TIMEG, DIS]>=0, start= 10)                                          # auxiliary variable\n",
+    "         @variable(m, nodeDict[j].pmin<=p[SCEN, j in NODE, TIMEG]<=nodeDict[j].pmax, start= 50)             # node pressure - [bar]\n",
+    "         #@variable(m, 0<=dp[SCEN, j = LINK,  TIMEG; linkDict[j].ltype == \"a\"]<=100, start= 10)             # compressor boost - [bar]\n",
+    "         @variable(m, dp[SCEN, j = LINK,  TIMEG; linkDict[j].ltype == \"a\"], start= 10)                      # compressor boost - [bar]\n",
+    "         @variable(m, 1<=fin[SCEN, LINK, TIMEG]<=500, start= 100)                                           # flow in pipe - [scmx10-4/hr]\n",
+    "         @variable(m, 1<=fout[SCEN, LINK, TIMEG]<=500, start= 100)                                          # flow out pipe - [scmx10-4/hr]\n",
+    "         @variable(m, 0.01<=sG[SCEN, j in SUP, TIMEG]<=supDict[j].max, start = 10)                          # supply flow - [scmx10-4/hr]\n",
+    "         @variable(m, dem[SCEN, DEM, TIMEG],    start=100)                                                  # demand flow - [scmx10-4/hr]\n",
+    "         @variable(m, 0<=pow[SCEN, j = LINK, TIMEG; linkDict[j].ltype == \"a\"]<=3000, start= 1000)           # compressor power - [kW]\n",
+    "         @variable(m, slack[SCEN, LINK, TIMEG, DIS]>=0, start= 10)                                          # auxiliary variable\n",
     "\n",
     "         # define spatio-temporal variables\n",
-    "         @defVar(m, 10<=px[SCEN, LINK, TIMEG, DIS]<=100, start= 50)                                       # link pressure profile - [bar]\n",
-    "         @defVar(m, 1<=fx[SCEN, LINK, TIMEG, DIS]<=100, start= 100)                                       # link flow profile - [scmx10-4/hr]\n",
+    "         @variable(m, 10<=px[SCEN, LINK, TIMEG, DIS]<=100, start= 50)                                       # link pressure profile - [bar]\n",
+    "         @variable(m, 1<=fx[SCEN, LINK, TIMEG, DIS]<=100, start= 100)                                       # link flow profile - [scmx10-4/hr]\n",
     "\n",
     "         # compressor equations\n",
     "         @addNLConstraint(m, powereq[i = SCEN, j = LINK, t = TIMEG; linkDict[j].ltype == \"a\"], pow[i,j,t] == c4*fin[i,j,t]*((px[i,j,t,1]/(px[i,j,t,1]-dp[i,j,t]))^om-1))\n",
     "\n",
     "         # node balance [mass]\n",
-    "         @addConstraint(m,nodemeq[k = SCEN, i in NODE, t = TIMEG], sum{       fout[k,j,t], j in LINK ; linkDict[j].endloc==i}\n",
+    "         @constraint(m,nodemeq[k = SCEN, i in NODE, t = TIMEG], sum{       fout[k,j,t], j in LINK ; linkDict[j].endloc==i}\n",
     "                                                                 - sum{       fin[k,j,t],  j in LINK ; linkDict[j].startloc==i}\n",
     "                                                                 + sum{        sG[k,j,t],  j in SUP ; supDict[j].loc == i }\n",
     "                                                                 - sum{       dem[k,j,t],  j in DEM ; demDict[j].loc == i }\n",
     "                                                                 ==0)\n",
     "\n",
     "         # flow equations for passive and active links\n",
-    "         @addConstraint(m, flow[i = SCEN, j = LINK, t = TIMEGm, k = 1:(Nx-1)], (px[i,j,t+1,k]-px[i,j,t,k])/dtG + linkDict[j].c1*(fx[i,j,t+1,k+1]-fx[i,j,t+1,k])/(linkDict[j].dx)==0)\n",
+    "         @constraint(m, flow[i = SCEN, j = LINK, t = TIMEGm, k = 1:(Nx-1)], (px[i,j,t+1,k]-px[i,j,t,k])/dtG + linkDict[j].c1*(fx[i,j,t+1,k+1]-fx[i,j,t+1,k])/(linkDict[j].dx)==0)\n",
     "\n",
     "         # boundary conditions flow\n",
-    "         @addConstraint(m, flow_start[i = SCEN, j = LINK, t = TIMEG], fx[i,j,t,1]==fin[i,j,t])\n",
-    "         @addConstraint(m, flow_end[i = SCEN, j = LINK, t = TIMEG], fx[i,j,t,Nx]==fout[i,j,t])\n",
+    "         @constraint(m, flow_start[i = SCEN, j = LINK, t = TIMEG], fx[i,j,t,1]==fin[i,j,t])\n",
+    "         @constraint(m, flow_end[i = SCEN, j = LINK, t = TIMEG], fx[i,j,t,Nx]==fout[i,j,t])\n",
     "\n",
     "         # pressure equations for passive and active links\n",
-    "         @addConstraint(m, press[i = SCEN, j = LINK, t = TIMEGm,k = 1:(Nx-1)], (fx[i,j,t+1,k]-fx[i,j,t,k])/dtG == - linkDict[j].c2*(px[i,j,t+1,k+1]-px[i,j,t+1,k])/linkDict[j].dx - slack[i,j,t+1,k])\n",
+    "         @constraint(m, press[i = SCEN, j = LINK, t = TIMEGm,k = 1:(Nx-1)], (fx[i,j,t+1,k]-fx[i,j,t,k])/dtG == - linkDict[j].c2*(px[i,j,t+1,k+1]-px[i,j,t+1,k])/linkDict[j].dx - slack[i,j,t+1,k])\n",
     "         @addNLConstraint(m, slackeq[i = SCEN, j = LINK, t = TIMEG, k = 1:Nx],  slack[i,j,t,k]*px[i,j,t,k] - linkDict[j].c3*fx[i,j,t,k]*fx[i,j,t,k] == 0);\n",
     "\n",
     "         # boundary conditions pressure, passive links\n",
-    "         @addConstraint(m, presspas_start[i = SCEN, j = LINK, t = TIMEG; linkDict[j].ltype == \"p\"], px[i,j,t,1] ==  p[i,linkDict[j].startloc,t])\n",
-    "         @addConstraint(m,   presspas_end[i = SCEN, j = LINK, t = TIMEG; linkDict[j].ltype == \"p\"], px[i,j,t,Nx] == p[i,linkDict[j].endloc,t])\n",
+    "         @constraint(m, presspas_start[i = SCEN, j = LINK, t = TIMEG; linkDict[j].ltype == \"p\"], px[i,j,t,1] ==  p[i,linkDict[j].startloc,t])\n",
+    "         @constraint(m,   presspas_end[i = SCEN, j = LINK, t = TIMEG; linkDict[j].ltype == \"p\"], px[i,j,t,Nx] == p[i,linkDict[j].endloc,t])\n",
     "\n",
     "         # boundary conditions, active links\n",
-    "         @addConstraint(m, pressact_start[i = SCEN, j = LINK, t = TIMEG; linkDict[j].ltype == \"a\"], px[i,j,t,1] ==  p[i,linkDict[j].startloc,t] + dp[i,j,t])\n",
-    "         @addConstraint(m,   pressact_end[i = SCEN, j = LINK, t = TIMEG; linkDict[j].ltype == \"a\"], px[i,j,t,Nx] == p[i,linkDict[j].endloc,t])\n",
+    "         @constraint(m, pressact_start[i = SCEN, j = LINK, t = TIMEG; linkDict[j].ltype == \"a\"], px[i,j,t,1] ==  p[i,linkDict[j].startloc,t] + dp[i,j,t])\n",
+    "         @constraint(m,   pressact_end[i = SCEN, j = LINK, t = TIMEG; linkDict[j].ltype == \"a\"], px[i,j,t,Nx] == p[i,linkDict[j].endloc,t])\n",
     "\n",
     "         # fix pressure at supply nodes\n",
-    "         @addConstraint(m, suppres[i = SCEN, j in SUP, t = TIMEG], p[i,supDict[j].loc,t] == nodeDict[supDict[j].loc].pmin)\n",
+    "         @constraint(m, suppres[i = SCEN, j in SUP, t = TIMEG], p[i,supDict[j].loc,t] == nodeDict[supDict[j].loc].pmin)\n",
     "\n",
     "         # discharge pressure for compressors\n",
-    "         @addConstraint(m, dispress[i in SCEN,j in LINK,t in TIMEG; linkDict[j].ltype==\"a\"],  p[i,linkDict[j].startloc,t]+dp[i,j,t]<=nodeDict[linkDict[j].startloc].pmax)\n",
+    "         @constraint(m, dispress[i in SCEN,j in LINK,t in TIMEG; linkDict[j].ltype==\"a\"],  p[i,linkDict[j].startloc,t]+dp[i,j,t]<=nodeDict[linkDict[j].startloc].pmax)\n",
     "        # line pack constraints\n",
-    "         @addConstraint(m, line_packT[i in SCEN],  sum{  sum{fx[i,j,Nt,k], k in DIS}*linkDict[j].dx, j in LINK} >= sum{ sum{fx[i,j,1,k],k in DIS}*linkDict[j].dx, j = LINK})\n",
+    "         @constraint(m, line_packT[i in SCEN],  sum{  sum{fx[i,j,Nt,k], k in DIS}*linkDict[j].dx, j in LINK} >= sum{ sum{fx[i,j,1,k],k in DIS}*linkDict[j].dx, j = LINK})\n",
     "\n",
     "         # ss constraints\n",
-    "         @addConstraint(m, flow_ss[i = SCEN, j = LINK, t =0, k = 1:(Nx-1)], (fx[i,j,t+1,k+1]-fx[i,j,t+1,k])==0)\n",
-    "         @addConstraint(m, pres_ss[i = SCEN, j = LINK, t =0, k = 1:(Nx-1)],  - linkDict[j].c2*(px[i,j, t+1,k+1]-px[i,j,t+1,k])/linkDict[j].dx - slack[i,j,t+1,k] == 0)\n",
+    "         @constraint(m, flow_ss[i = SCEN, j = LINK, t =0, k = 1:(Nx-1)], (fx[i,j,t+1,k+1]-fx[i,j,t+1,k])==0)\n",
+    "         @constraint(m, pres_ss[i = SCEN, j = LINK, t =0, k = 1:(Nx-1)],  - linkDict[j].c2*(px[i,j, t+1,k+1]-px[i,j,t+1,k])/linkDict[j].dx - slack[i,j,t+1,k] == 0)\n",
     "\n",
     "         @setObjective(m, Min, 1e-6*(1.0/S)*sum{ce*pow[i,j,t]*(dtG/3600),i= SCEN, j = LINK,t = TIMEG; linkDict[j].ltype == \"a\"}\n",
     "                              +1e-6*(1.0/S)*sum{cd*(dem[i,j,t]-demDict[j].stochd[i,t])^2, i in SCEN, j in DEM, t in TIMEG})\n",
@@ -192,8 +192,8 @@
     "         # non-anticipativity constraints (note this is only for t==1)\n",
     "         if (length(SCEN)> 1)\n",
     "             bs = SCEN[1]\n",
-    "             @addConstraint(m,  nonantdq[i in SCEN,j in LINK,t in TIMEG; linkDict[j].ltype ==\"a\" && t ==1 && i != bs],   dp[i,j,t] ==  dp[bs,j,t])\n",
-    "             @addConstraint(m,  nonantde[i in SCEN,j in DEM, t in TIMEG;                            t ==1 && i != bs],   dem[i,j,t]== dem[bs,j,t])\n",
+    "             @constraint(m,  nonantdq[i in SCEN,j in LINK,t in TIMEG; linkDict[j].ltype ==\"a\" && t ==1 && i != bs],   dp[i,j,t] ==  dp[bs,j,t])\n",
+    "             @constraint(m,  nonantde[i in SCEN,j in DEM, t in TIMEG;                            t ==1 && i != bs],   dem[i,j,t]== dem[bs,j,t])\n",
     "         end\n",
     "\n",
     "         return m\n",
@@ -224,13 +224,13 @@
    "source": [
     "# build with PLASMO and solve with PIPS-NLP\n",
     "IL = NetModel()\n",
-    "@defVar(IL, dp[j = LINK; linkDict[j].ltype == \"a\"], start= 10)                       # compressor boost - [bar]\n",
-    "@defVar(IL, dem[DEM],    start=100)                                                  # demand flow - [scmx10-4/hr]\n",
+    "@variable(IL, dp[j = LINK; linkDict[j].ltype == \"a\"], start= 10)                       # compressor boost - [bar]\n",
+    "@variable(IL, dem[DEM],    start=100)                                                  # demand flow - [scmx10-4/hr]\n",
     "for s in SCENG\n",
     "   single_scenario = createGasModel(s:s)\n",
     "   @addNode(IL, single_scenario, \"s$s\")\n",
-    "   @addConstraint(IL,  nonantdq[j in LINK,t in TIMEG; linkDict[j].ltype ==\"a\" && t ==1],   dp[j] ==  getVar(single_scenario, :dp)[s,j,t])\n",
-    "   @addConstraint(IL,  nonantde[j in DEM, t in TIMEG;                            t ==1],   dem[j]==  getVar(single_scenario,:dem)[s,j,t])\n",
+    "   @constraint(IL,  nonantdq[j in LINK,t in TIMEG; linkDict[j].ltype ==\"a\" && t ==1],   dp[j] ==  getVar(single_scenario, :dp)[s,j,t])\n",
+    "   @constraint(IL,  nonantde[j in DEM, t in TIMEG;                            t ==1],   dem[j]==  getVar(single_scenario,:dem)[s,j,t])\n",
     "end\n",
     "ParPipsNlp_solve(IL)"
    ]
