--- a/UWMadison2016/PIPS_examples/stochpdegas_PIPS_parallel.ipynb
+++ b/UWMadison2016/PIPS_examples/stochpdegas_PIPS_parallel.ipynb
@@ -2,11 +2,165 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1/2] create problem \n",
+      "[0/2] create problem \n",
+      " callback created \n",
+      "on proc [1] of [2] MPI processes.\n",
+      "load option file: pipsnlp.parameter \n",
+      " ccall CreatePipsNlpProblemStruct done \n",
+      "end createProblemStruct - julia\n",
+      "load option file: pipsnlp.parameter \n",
+      " callback created \n",
+      "on proc [0] of [2] MPI processes.\n",
+      "load option file: pipsnlp.parameter \n",
+      "OPTION: Set DoIR_Aug to 1\n",
+      "OPTION: Set DoIR_Full to 0\n",
+      "OPTION: Set printing level to 6\n",
+      "OPTION: Set Iteration Limit to 500\n",
+      "OPTION: Set Convergence Tolerance to 1.00e-02\n",
+      "OPTION: Max Line search step:   50\n",
+      "OPTION: Set Sym linear solver as MA57.\n",
+      "OPTION: MA57 pivot level = 1.00e-04\n",
+      "OPTION: MA57 ordering method = 5, (see doc)\n",
+      "OPTION: Do IR on Aug sys.\n",
+      "OPTION: Set MaxIR to 10\n",
+      "OPTION: Set IRtol to 1.00e-12\n",
+      "OPTION: Require small constraint violation in SWC \n",
+      " ccall CreatePipsNlpProblemStruct done \n",
+      "end createProblemStruct - julia\n",
+      "load option file: pipsnlp.parameter \n",
+      "OPTION: Set DoIR_Aug to 1\n",
+      "OPTION: Set DoIR_Full to 0\n",
+      "OPTION: Set printing level to 6\n",
+      "OPTION: Set Iteration Limit to 500\n",
+      "OPTION: Set Convergence Tolerance to 1.00e-02\n",
+      "OPTION: Max Line search step:   50\n",
+      "OPTION: Set Sym linear solver as MA57.\n",
+      "OPTION: MA57 pivot level = 1.00e-04\n",
+      "OPTION: MA57 ordering method = 5, (see doc)\n",
+      "OPTION: Do IR on Aug sys.\n",
+      "OPTION: Set MaxIR to 10\n",
+      "OPTION: Set IRtol to 1.00e-12\n",
+      "OPTION: Require small constraint violation in SWC \n",
+      "  \n",
+      "  -----------------------------------------------\n",
+      "  NLP Solver \n",
+      "  Argonne National Laboratory, 2016\n",
+      "  -----------------------------------------------\n",
+      "\n",
+      "\n",
+      "  Linear system solver ------\t Ma57.\n",
+      "\n",
+      "solving ...\n",
+      "1st stage 11 variables, 0 equality constraints, 0 inequality constraints.\n",
+      "2nd stage (use 1st scenario): 4008 variables, 3755 equality constraints, 241 inequality constraints.\n",
+      "40 scenarios.\n",
+      "Total 160331 variables, 150200 equality constraints, 9640 inequality constraints. \n",
+      "\n",
+      " Iter\t  Objective     Inf_pr\t  Inf_du     Comp    lg(mu)   ||d||   lg(PrRg)\t alpha_du   alpha_pr \n",
+      " 0\t 7.6900249e+04  5.56e+03  2.92e+00  2.00e+03  -1.0\n",
+      " 1\t 7.6766630e+04  5.55e+03  3.57e+00  2.01e+03  -1.0  3.65e+03      - \t 1.40e-02  3.09e-03-b   \t\n",
+      " 2\t 6.3138608e+04  4.16e+03  6.10e+02  2.38e+03  -1.0  3.02e+03      - \t 4.93e-03  2.86e-01-b   \t\n",
+      " 3\t 6.2607651e+04  4.12e+03  6.19e+02  2.25e+03  -1.0  7.79e+02      - \t 5.04e-02  9.76e-03-b   \t\n",
+      " 4\t 5.6770745e+04  3.69e+03  7.10e+02  2.17e+03  -1.0  8.20e+02      - \t 4.25e-02  1.09e-01-b   \t\n",
+      " 5\t 5.2372096e+04  3.38e+03  7.55e+02  1.74e+03  -1.0  7.48e+02      - \t 1.92e-01  8.70e-02-b   \t\n",
+      " 6\t 4.6522679e+04  2.99e+03  7.88e+02  1.40e+03  -1.0  7.52e+02      - \t 2.00e-01  1.18e-01-b   \t\n",
+      " 7\t 4.2160048e+04  2.71e+03  7.94e+02  1.10e+03  -1.0  6.61e+02      - \t 2.25e-01  9.53e-02-b   \t\n",
+      " 8\t 4.1382063e+04  2.66e+03  7.94e+02  8.37e+02  -1.0  6.80e+02      - \t 2.84e-01  1.84e-02-b   \t\n",
+      " 9\t 3.5342759e+04  2.34e+03  7.84e+02  6.99e+02  -1.0  4.10e+03      - \t 2.10e-01  1.26e-01-b   \t\n",
+      " Iter\t  Objective     Inf_pr\t  Inf_du     Comp    lg(mu)   ||d||   lg(PrRg)\t alpha_du   alpha_pr \n",
+      " 10\t 3.5188638e+04  2.33e+03  7.84e+02  3.74e+02  -1.0  6.10e+01     -2.0\t 4.80e-01  4.21e-03-b   \t\n",
+      " 11\t 3.3516210e+04  2.22e+03  7.73e+02  1.44e+02  -1.0  2.42e+02     -2.5\t 7.88e-01  4.81e-02-b   \t\n",
+      " 12\t 1.1911550e+04  8.31e+02  3.00e+02  4.21e+01  -1.0  5.13e+02     -3.0\t 6.87e-01  8.26e-01-b   \t\n",
+      " 13\t 4.4106357e+03  1.57e+02  1.72e+02  1.88e+01  -1.0  1.58e+02     -2.5\t 5.57e-01  9.90e-01-b   \t\n",
+      " 14\t 3.4781979e+03  9.76e+00  9.92e+02  1.61e+01  -1.0  2.44e+01     -3.0\t 1.63e-01  9.97e-01-b   \t\n",
+      " 15\t 2.5847064e+03  3.82e+00  4.91e+04  1.32e+01  -1.0  7.54e+01     -3.5\t 2.05e-01  6.15e-01-b   \t\n",
+      " 16\t 2.5590816e+03  3.67e+00  1.36e+04  6.48e+00  -1.0  1.16e+02     -4.0\t 5.17e-01  4.15e-02-f   \t\n",
+      " 17\t 2.0083517e+03  6.85e+02  2.07e+04  4.92e+00  -1.0  2.87e+03     -4.4\t 2.27e-01  5.90e-01-f   \t\n",
+      " 18\t 1.9020624e+03  4.92e+02  1.68e+03  2.58e+00  -1.0  1.06e+02     -4.0\t 4.91e-01  2.88e-01-f   \t\n",
+      " 19\t 1.1601223e+03  4.52e+01  3.09e+04  2.13e+00  -1.0  2.85e+02     -4.5\t 1.25e-01  1.00e+00-f   \t\n",
+      " Iter\t  Objective     Inf_pr\t  Inf_du     Comp    lg(mu)   ||d||   lg(PrRg)\t alpha_du   alpha_pr \n",
+      " 20\t 9.1716184e+02  9.84e+00  2.59e+04  1.66e+00  -1.0  7.32e+01     -4.1\t 1.98e-01  7.84e-01-f   \t\n",
+      " 21\t 6.0066370e+02  2.28e+00  1.99e+04  1.24e+00  -1.0  1.26e+02     -4.5\t 2.40e-01  7.62e-01-f   \t\n",
+      " 22\t 4.9463761e+02  2.64e+00  1.21e+04  7.42e-01  -1.0  6.50e+01     -4.1\t 3.92e-01  8.97e-01-f   \t\n",
+      " 23\t 4.3954039e+02  1.43e+00  1.10e+04  6.73e-01  -1.0  2.01e+01     -3.7\t 9.46e-02  4.84e-01-f   \t\n",
+      " 24\t 3.7129791e+02  3.10e+00  8.59e+03  5.28e-01  -1.0  1.76e+02     -4.2\t 2.17e-01  3.55e-01-f   \t\n",
+      " 25\t 3.3191982e+02  2.37e+00  6.64e+03  4.08e-01  -1.0  2.29e+01     -3.7\t 2.27e-01  2.36e-01-f   \t\n",
+      " 26\t 2.7129457e+02  4.39e+00  5.02e+03  3.08e-01  -1.0  2.37e+02     -4.2\t 2.44e-01  3.17e-01-f   \t\n",
+      " 27\t 2.3518344e+02  2.60e+00  2.89e+03  1.77e-01  -1.0  2.45e+01     -3.8\t 4.23e-01  4.08e-01-f   \t\n",
+      " 28\t 1.7861311e+02  1.51e+03  2.55e+03  1.58e-01  -1.0  2.16e+03     -4.3\t 1.19e-01  8.69e-01-f   \t\n",
+      " 29\t 1.6468524e+02  1.78e+02  9.41e+02  2.25e-01  -1.0  1.48e+02     -3.8\t 6.31e-01  1.00e+00-f   \t\n",
+      " Iter\t  Objective     Inf_pr\t  Inf_du     Comp    lg(mu)   ||d||   lg(PrRg)\t alpha_du   alpha_pr \n",
+      " 30\t 1.3871339e+02  4.08e+00  1.34e-01  2.92e-02  -1.0  4.73e+01     -4.3\t 1.00e+00  1.00e+00-f   \t\n",
+      " 31\t 1.3201421e+02  2.33e-02  1.96e-02  1.48e-03  -1.0  1.68e+01     -3.9\t 1.00e+00  1.00e+00-b   \t\n",
+      " 32\t 7.9864193e+01  3.31e-01  1.97e+04  2.77e-02  -3.0  5.52e+01     -4.4\t 8.87e-01  1.00e+00-f   \t\n",
+      " 33\t 6.7645289e+01  4.85e-02  4.03e+02  6.86e-03  -3.0  1.81e+01     -3.9\t 9.80e-01  1.00e+00-b   \t\n",
+      " 34\t 5.4457229e+01  1.52e-01  5.09e-02  1.66e-03  -3.0  3.95e+01     -4.4\t 1.00e+00  9.30e-01-f   \t\n",
+      " 35\t 5.0661998e+01  2.01e-02  1.72e-02  2.58e-04  -3.0  1.33e+01     -4.0\t 1.00e+00  1.00e+00-b   \t\n",
+      " 36\t 4.3988161e+01  1.37e-01  3.50e-02  5.86e-04  -3.0  2.83e+01     -4.5\t 1.00e+00  1.00e+00-f   \t\n",
+      " 37\t 4.2132161e+01  2.00e-02  1.11e-02  4.56e-04  -3.0  9.31e+00     -4.0\t 1.00e+00  1.00e+00-b   \t\n",
+      " 38\t 3.8009404e+01  1.59e-01  5.56e-02  9.07e-04  -3.0  2.33e+01     -4.5\t 4.10e-01  1.00e+00-f   \t\n",
+      " 39\t 3.6380720e+01  2.35e-02  8.85e-03  1.55e-03  -3.0  8.69e+00     -4.1\t 1.00e+00  1.00e+00-b   \t\n",
+      " Iter\t  Objective     Inf_pr\t  Inf_du     Comp    lg(mu)   ||d||   lg(PrRg)\t alpha_du   alpha_pr \n",
+      " 40\t 3.2331193e+01  1.87e-01  2.67e-02  9.05e-04  -3.0  2.49e+01     -4.6\t 7.15e-01  1.00e+00-f   \t\n",
+      " 41\t 3.0898648e+01  2.76e-02  8.51e-03  1.88e-04  -3.0  9.32e+00     -4.1\t 1.00e+00  1.00e+00-b   \t\n",
+      " 42\t 2.7210033e+01  2.16e-01  2.25e-02  4.59e-04  -3.0  2.66e+01     -4.6\t 1.00e+00  1.00e+00-f   \t\n",
+      " 43\t 2.5942884e+01  3.20e-02  7.79e-03  1.28e-04  -3.0  9.94e+00     -4.2\t 1.00e+00  1.00e+00-b   \t\n",
+      " 44\t 2.2736728e+01  2.45e-01  2.05e-02  7.97e-04  -3.0  2.82e+01     -4.7\t 1.00e+00  1.00e+00-f   \t\n",
+      " 45\t 2.1753812e+01  3.55e-02  7.86e-03  1.42e-03  -3.0  1.05e+01     -4.2\t 1.00e+00  1.00e+00-b   \t\n",
+      " 46\t 1.9072767e+01  2.72e-01  1.94e-02  1.89e-04  -3.0  2.97e+01     -4.7\t 1.00e+00  1.00e+00-f   \t\n",
+      " 47\t 1.8148777e+01  4.05e-02  6.59e-03  6.38e-05  -3.0  1.11e+01     -4.3\t 1.00e+00  1.00e+00-b   \t\n",
+      " 48\t 1.5800095e+01  3.03e-01  1.69e-02  1.65e-04  -3.0  3.10e+01     -4.8\t 1.00e+00  1.00e+00-f   \t\n",
+      " 49\t 1.4997118e+01  4.61e-02  5.68e-03  4.40e-05  -3.0  1.16e+01     -4.4\t 1.00e+00  1.00e+00-b   \t\n",
+      " Iter\t  Objective     Inf_pr\t  Inf_du     Comp    lg(mu)   ||d||   lg(PrRg)\t alpha_du   alpha_pr \n",
+      " 50\t 1.2963107e+01  3.41e-01  1.42e-02  1.08e-04  -3.0  3.21e+01     -4.8\t 1.00e+00  1.00e+00-o   \t\n",
+      " 51\t 1.2271466e+01  5.19e-02  4.73e-03  2.58e-05  -3.0  1.20e+01     -4.4\t 1.00e+00  1.00e+00-b   \t\n",
+      " 52\t 1.0530361e+01  3.74e-01  1.17e-02  7.02e-05  -3.0  3.27e+01     -4.9\t 1.00e+00  1.00e+00-o   \t\n",
+      " 53\t 9.9404820e+00  5.70e-02  3.85e-03  1.41e-05  -3.0  1.21e+01     -4.5\t 1.00e+00  1.00e+00-b   \t\n",
+      " 54\t 8.4625287e+00  3.97e-01  9.38e-03  5.17e-05  -3.0  3.28e+01     -4.9\t 1.00e+00  1.00e+00-o   \t\n",
+      " 55\t 7.9638650e+00  6.03e-02  3.08e-03  1.23e-05  -3.0  1.21e+01     -4.5\t 1.00e+00  1.00e+00-b   \t\n",
+      " 56\t 6.7202363e+00  4.05e-01  7.43e-03  5.59e-05  -3.0  3.24e+01     -5.0\t 1.00e+00  1.00e+00-o   \t\n",
+      " 57\t 6.3027165e+00  6.10e-02  2.42e-03  1.59e-05  -3.0  1.18e+01     -4.6\t 1.00e+00  1.00e+00-b   \t\n",
+      " 58\t 5.2667291e+00  3.93e-01  5.81e-03  7.13e-05  -3.0  3.28e+01     -5.0\t 1.00e+00  1.00e+00-o   \t\n",
+      " 59\t 4.9211559e+00  5.84e-02  1.89e-03  1.82e-05  -3.0  1.19e+01     -4.6\t 1.00e+00  1.00e+00-b   \t\n",
+      " Iter\t  Objective     Inf_pr\t  Inf_du     Comp    lg(mu)   ||d||   lg(PrRg)\t alpha_du   alpha_pr \n",
+      " 60\t 4.0691629e+00  3.58e-01  4.51e-03  8.22e-05  -3.0  3.28e+01     -5.1\t 1.00e+00  1.00e+00-o   \t\n",
+      " 61\t 3.7873305e+00  5.23e-02  1.46e-03  1.44e-05  -3.0  1.18e+01     -4.7\t 1.00e+00  1.00e+00-b   \t\n",
+      " 62\t 3.0979074e+00  3.05e-01  3.48e-03  7.29e-05  -3.0  3.23e+01     -5.1\t 1.00e+00  1.00e+00-o   \t\n",
+      " 63\t 2.8721403e+00  4.34e-02  1.12e-03  1.09e-05  -3.0  1.16e+01     -4.7\t 1.00e+00  1.00e+00-b   \t\n",
+      " 64\t 2.3248226e+00  2.42e-01  2.76e-03  5.11e-05  -3.0  3.13e+01     -5.2\t 1.00e+00  1.00e+00-o   \t\n",
+      " 65\t 2.1476491e+00  3.39e-02  8.91e-04  7.94e-06  -3.0  1.12e+01     -4.8\t 1.00e+00  1.00e+00-b   \t\n",
+      " 66\t 1.7222485e+00  1.83e-01  2.20e-03  3.56e-05  -3.0  2.98e+01     -5.2\t 1.00e+00  1.00e+00-o   \t\n",
+      " 67\t 1.5863450e+00  2.47e-02  7.05e-04  6.18e-06  -3.0  1.06e+01     -4.8\t 1.00e+00  1.00e+00-b   \t\n",
+      " 68\t 1.2630280e+00  1.26e-01  1.74e-03  3.45e-05  -3.0  2.78e+01     -5.3\t 1.00e+00  1.00e+00-o   \t\n",
+      " 69\t 1.1613488e+00  1.65e-02  5.54e-04  7.64e-06  -3.0  9.84e+00     -4.9\t 1.00e+00  1.00e+00-b   \t\n",
+      " Iter\t  Objective     Inf_pr\t  Inf_du     Comp    lg(mu)   ||d||   lg(PrRg)\t alpha_du   alpha_pr \n",
+      " 70\t 9.2120924e-01  7.97e-02  1.36e-03  4.74e-05  -3.0  2.54e+01     -5.3\t 1.00e+00  1.00e+00-o   \t\n",
+      " 71\t 8.4713797e-01  1.00e-02  4.31e-04  9.60e-06  -3.0  8.96e+00     -4.9\t 1.00e+00  1.00e+00-b   \t\n",
+      " 72\t 6.7279991e-01  5.38e-02  1.05e-03  6.02e-05  -3.0  2.28e+01     -5.4\t 1.00e+00  1.00e+00-o   \t\n",
+      " 73\t 6.2026225e-01  6.51e-03  3.30e-04  1.01e-05  -3.0  8.02e+00     -5.0\t 1.00e+00  1.00e+00-b   \t\n",
+      "\n",
+      "\n",
+      "  Optimal Solution Found! In Iter: 73\n",
+      "  Optimal solution is: 6.2026225e-01\n",
+      "  Addition Fact due to reg: 95 \n",
+      "  Iter is accepted due to: \n",
+      "\t\t\t\t\t\t\tSWC and AC: 24 \n",
+      "\t\t\t\t\t\t\tSRC __ Obj: 12 \n",
+      "\t\t\t\t\t\t\tSRC __ Con: 0 \n",
+      "\t\t\t\t\t\t\tSRC (both): 37 \n"
+     ]
+    }
+   ],
    "source": [
     "run(`mpirun -np 2 /opt/julia-0.4.5/bin/julia stochpdegas_PIPS.jl`)"
    ]
@@ -23,7 +177,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.4.2",
+   "display_name": "Julia 0.4.5",
    "language": "julia",
    "name": "julia-0.4"
   },
@@ -31,7 +185,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.4.2"
+   "version": "0.4.5"
   }
  },
  "nbformat": 4,
