--- a/UWMadison2016/stochprog/farmer-probconstraint.ipynb
+++ b/UWMadison2016/stochprog/farmer-probconstraint.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Farmer problem with Probabilistic Constraints \n",
+    "Farmer Problem with Probabilistic Constraints \n",
     "\n",
     "Mauricio Tombini and Victor M. Zavala 2016 \n",
     "\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -27,22 +27,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "30"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Model parameters\n",
     "\n",
@@ -76,7 +65,6 @@
     "yield = zeros(length(S),3) # yields\n",
     "yield[S,1] = 2.5;\n",
     "yield[S,2] = 3.0;\n",
-    "\n",
     "yield[1,3] = 10;\n",
     "yield[2,3] = 15;\n",
     "yield[3,3] = 20;\n",
@@ -86,43 +74,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cost: 1 dimensions:\n",
-      "[1] = -279100.0\n",
-      "[2] = -279099.99999999994\n",
-      "[3] = -279100.0\n",
-      "[4] = -279100.0\n",
-      "[5] = -279100.00000000006\n",
-      "\n",
-      "\n",
-      "wp: 1 dimensions:\n",
-      "[1] = 1.0\n",
-      "[2] = 1.0\n",
-      "[3] = 0.9999999999999999\n",
-      "[4] = 1.0\n",
-      "[5] = 1.0\n",
-      "\n",
-      "\n",
-      "probcost: 1 dimensions:\n",
-      "[1] = -6000.0\n",
-      "[2] = -6000.000000000001\n",
-      "[3] = -6000.000000000001\n",
-      "[4] = -6000.000000000001\n",
-      "[5] = -6000.0\n",
-      "\n",
-      "\n",
-      "obj -279100.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Model \n",
     "\n",
@@ -174,39 +130,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cost: 1 dimensions:\n",
-      "[1] = -118599.99999999994\n",
-      "[2] = -118599.99999999994\n",
-      "[3] = -118599.99999999996\n",
-      "[4] = -118599.99999999999\n",
-      "[5] = -118600.0\n",
-      "\n",
-      "\n",
-      "probcost: 1 dimensions:\n",
-      "[1] = 2999.9999999999995\n",
-      "[2] = 1500.0\n",
-      "[3] = -5.407887852028221e-13\n",
-      "[4] = -1499.9999999999989\n",
-      "[5] = -3000.000000000001\n",
-      "\n",
-      "\n",
-      "0.0\n",
-      "\n",
-      "-3000.000000000001\n",
-      "\n",
-      "obj -118599.99999999997\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Model (with cvar)\n",
     "\n",
@@ -253,50 +181,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "******************************************************************************\n",
-      "This program contains Ipopt, a library for large-scale nonlinear optimization.\n",
-      " Ipopt is released as open source code under the Eclipse Public License (EPL).\n",
-      "         For more information visit http://projects.coin-or.org/Ipopt\n",
-      "******************************************************************************\n",
-      "\n",
-      "cost: 1 dimensions:\n",
-      "[1] = -241551.25237687508\n",
-      "[2] = -241551.25237687505\n",
-      "[3] = -241551.25237687503\n",
-      "[4] = -241551.25237687497\n",
-      "[5] = -25551.250216536293\n",
-      "\n",
-      "\n",
-      "probcost: 1 dimensions:\n",
-      "[1] = 5298.154230041101\n",
-      "[2] = 4947.231315056828\n",
-      "[3] = 4596.308400072554\n",
-      "[4] = 4245.385485088281\n",
-      "[5] = -2105.537489905399\n",
-      "\n",
-      "\n",
-      "phi: 1 dimensions:\n",
-      "[1] = 1.099450175219882\n",
-      "[2] = 1.0992192093308593\n",
-      "[3] = 1.0988913172566999\n",
-      "[4] = 1.098425922732688\n",
-      "[5] = 0.6040134254598314\n",
-      "\n",
-      "\n",
-      "obj -198351.2519448073\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Model (with sigmoid approximation)\n",
     "b= 10\n",
