--- a/UWMadison2016/stochprog/farmer.ipynb
+++ b/UWMadison2016/stochprog/farmer.ipynb
@@ -6,14 +6,14 @@
    "source": [
     "Farmer problem (here-and-now) policy\n",
     "\n",
-    "Mauricio Tombini and Victor M. Zavala 2016 \n",
+    "Mauricio Tombini, Jordan Jalving, and Victor M. Zavala 2016 \n",
     "\n",
     "University of Wisconsin-Madison  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -25,26 +25,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "30"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Model parameters\n",
     "\n",
-    "NS = 5;                    # number of scenarios\n",
+    "NS = 5;                  # number of scenarios\n",
     "S = collect(1:NS);       # scenario set\n",
     "P = collect(1:3);        # set of crops (1=wheat,2=corn,3=beets)\n",
     "\n",
@@ -70,11 +59,9 @@
     "demand[3] = 0;\n",
     "\n",
     "# assign random data\n",
-    "\n",
     "yield = zeros(length(S),3) # yields\n",
     "yield[S,1] = 2.5;\n",
     "yield[S,2] = 3.0;\n",
-    "\n",
     "yield[1,3] = 10;\n",
     "yield[2,3] = 15;\n",
     "yield[3,3] = 20;\n",
@@ -84,25 +71,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       ":Optimal"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Model \n",
-    "\n",
+    "# Create Model \n",
     "m = Model(solver=IpoptSolver(print_level=0))\n",
     "\n",
     "@variable(m, x[S,P] >= 0)    # acres devoted to crops\n",
@@ -124,99 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x: 2 dimensions:\n",
-      "[1,:]\n",
-      "  [1,1] = 220.00000379973474\n",
-      "  [1,2] = 79.99999920015239\n",
-      "  [1,3] = 200.0000020000673\n",
-      "[2,:]\n",
-      "  [2,1] = 220.00000379973474\n",
-      "  [2,2] = 79.99999920015239\n",
-      "  [2,3] = 200.0000020000673\n",
-      "[3,:]\n",
-      "  [3,1] = 220.00000379973474\n",
-      "  [3,2] = 79.99999920015239\n",
-      "  [3,3] = 200.0000020000673\n",
-      "[4,:]\n",
-      "  [4,1] = 220.00000379973474\n",
-      "  [4,2] = 79.99999920015239\n",
-      "  [4,3] = 200.0000020000673\n",
-      "[5,:]\n",
-      "  [5,1] = 220.00000379973474\n",
-      "  [5,2] = 79.99999920015239\n",
-      "  [5,3] = 200.0000020000673\n",
-      "\n",
-      "\n",
-      "y: 2 dimensions:\n",
-      "[1,:]\n",
-      "  [1,1] = 0.0\n",
-      "  [1,2] = 0.0\n",
-      "  [1,3] = 0.0\n",
-      "[2,:]\n",
-      "  [2,1] = 0.0\n",
-      "  [2,2] = 0.0\n",
-      "  [2,3] = 0.0\n",
-      "[3,:]\n",
-      "  [3,1] = 0.0\n",
-      "  [3,2] = 0.0\n",
-      "  [3,3] = 0.0\n",
-      "[4,:]\n",
-      "  [4,1] = 0.0\n",
-      "  [4,2] = 0.0\n",
-      "  [4,3] = 0.0\n",
-      "[5,:]\n",
-      "  [5,1] = 0.0\n",
-      "  [5,2] = 0.0\n",
-      "  [5,3] = 0.0\n",
-      "\n",
-      "\n",
-      "w: 2 dimensions:\n",
-      "[1,:]\n",
-      "  [1,1] = 350.00001148944745\n",
-      "  [1,2] = 0.0\n",
-      "  [1,3] = 2000.0000200003253\n",
-      "[2,:]\n",
-      "  [2,1] = 350.00001148944745\n",
-      "  [2,2] = 0.0\n",
-      "  [2,3] = 3000.000030000662\n",
-      "[3,:]\n",
-      "  [3,1] = 350.00001148944745\n",
-      "  [3,2] = 0.0\n",
-      "  [3,3] = 4000.0000400009985\n",
-      "[4,:]\n",
-      "  [4,1] = 350.00001148944745\n",
-      "  [4,2] = 0.0\n",
-      "  [4,3] = 5000.000050001335\n",
-      "[5,:]\n",
-      "  [5,1] = 350.00001148944745\n",
-      "  [5,2] = 0.0\n",
-      "  [5,3] = 6000.000059999594\n",
-      "\n",
-      "\n",
-      "cost: 1 dimensions:\n",
-      "[1] = -28100.001770180523\n",
-      "[2] = -64100.00213019264\n",
-      "[3] = -100100.00249020477\n",
-      "[4] = -136100.00285021687\n",
-      "[5] = -172100.00321015422\n",
-      "\n",
-      "\n",
-      "obj -100100.00249018983\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Results\n",
-    "\n",
     "println(getvalue(x))\n",
     "println(\"\")\n",
     "println(getvalue(y))\n",
