--- a/UWMadison2016/stochprog/farmercvar.ipynb
+++ b/UWMadison2016/stochprog/farmercvar.ipynb
@@ -6,14 +6,14 @@
    "source": [
     "Farmer problem (CVaR policy) \n",
     "\n",
-    "Mauricio Tombini and Victor M. Zavala 2016 \n",
+    "Mauricio Tombini, Jordan Jalving, and Victor M. Zavala 2016 \n",
     "\n",
     "University of Wisconsin-Madison "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -25,22 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Model parameters\n",
     "\n",
@@ -74,52 +63,25 @@
     "yield = zeros(length(S),3) # yields\n",
     "yield[S,1] = 2.5;\n",
     "yield[S,2] = 3.0;\n",
-    "\n",
     "yield[1,3] = 10;\n",
     "yield[2,3] = 15;\n",
     "yield[3,3] = 20;\n",
     "yield[4,3] = 25;\n",
     "yield[5,3] = 30;\n",
     "\n",
-    "# set cvar parameter\n",
-    "\n",
+    "# set cvar probability level\n",
     "alpha = 5/5;              # probability level cvar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "******************************************************************************\n",
-      "This program contains Ipopt, a library for large-scale nonlinear optimization.\n",
-      " Ipopt is released as open source code under the Eclipse Public License (EPL).\n",
-      "         For more information visit http://projects.coin-or.org/Ipopt\n",
-      "******************************************************************************\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       ":Optimal"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Model \n",
-    "\n",
     "m = Model(solver=IpoptSolver(print_level=0))\n",
     "\n",
     "@variable(m, x[S,P] >= 0)    # acres devoted to crops\n",
@@ -145,99 +107,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x: 2 dimensions:\n",
-      "[1,:]\n",
-      "  [1,1] = 220.00000379973474\n",
-      "  [1,2] = 79.99999920015239\n",
-      "  [1,3] = 200.00000200006727\n",
-      "[2,:]\n",
-      "  [2,1] = 220.00000379973474\n",
-      "  [2,2] = 79.99999920015239\n",
-      "  [2,3] = 200.00000200006727\n",
-      "[3,:]\n",
-      "  [3,1] = 220.00000379973474\n",
-      "  [3,2] = 79.99999920015239\n",
-      "  [3,3] = 200.00000200006727\n",
-      "[4,:]\n",
-      "  [4,1] = 220.00000379973474\n",
-      "  [4,2] = 79.99999920015239\n",
-      "  [4,3] = 200.00000200006727\n",
-      "[5,:]\n",
-      "  [5,1] = 220.00000379973474\n",
-      "  [5,2] = 79.99999920015239\n",
-      "  [5,3] = 200.00000200006727\n",
-      "\n",
-      "\n",
-      "y: 2 dimensions:\n",
-      "[1,:]\n",
-      "  [1,1] = 0.0\n",
-      "  [1,2] = 0.0\n",
-      "  [1,3] = 0.0\n",
-      "[2,:]\n",
-      "  [2,1] = 0.0\n",
-      "  [2,2] = 0.0\n",
-      "  [2,3] = 0.0\n",
-      "[3,:]\n",
-      "  [3,1] = 0.0\n",
-      "  [3,2] = 0.0\n",
-      "  [3,3] = 0.0\n",
-      "[4,:]\n",
-      "  [4,1] = 0.0\n",
-      "  [4,2] = 0.0\n",
-      "  [4,3] = 0.0\n",
-      "[5,:]\n",
-      "  [5,1] = 0.0\n",
-      "  [5,2] = 0.0\n",
-      "  [5,3] = 0.0\n",
-      "\n",
-      "\n",
-      "w: 2 dimensions:\n",
-      "[1,:]\n",
-      "  [1,1] = 350.0000114894474\n",
-      "  [1,2] = 0.0\n",
-      "  [1,3] = 2000.000020000325\n",
-      "[2,:]\n",
-      "  [2,1] = 350.0000114894474\n",
-      "  [2,2] = 0.0\n",
-      "  [2,3] = 3000.000030000662\n",
-      "[3,:]\n",
-      "  [3,1] = 350.0000114894474\n",
-      "  [3,2] = 0.0\n",
-      "  [3,3] = 4000.000040000998\n",
-      "[4,:]\n",
-      "  [4,1] = 350.0000114894474\n",
-      "  [4,2] = 0.0\n",
-      "  [4,3] = 5000.000050001334\n",
-      "[5,:]\n",
-      "  [5,1] = 350.00001148944745\n",
-      "  [5,2] = 0.0\n",
-      "  [5,3] = 6000.000059999594\n",
-      "\n",
-      "\n",
-      "cost: 1 dimensions:\n",
-      "[1] = -28100.001770180508\n",
-      "[2] = -64100.00213019263\n",
-      "[3] = -100100.00249020476\n",
-      "[4] = -136100.0028502168\n",
-      "[5] = -172100.00321015422\n",
-      "\n",
-      "\n",
-      "obj: -100100.00249018724\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Results\n",
-    "\n",
     "println(getvalue(x))\n",
     "println(\"\")\n",
     "println(getvalue(y))\n",
@@ -248,24 +124,6 @@
     "println(\"\")\n",
     "println(\"obj: \", getobjectivevalue(m))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
