--- a/UWMadison2016/stochprog/farmerdet.ipynb
+++ b/UWMadison2016/stochprog/farmerdet.ipynb
@@ -6,14 +6,14 @@
    "source": [
     "Farmer problem (deterministic policy)\n",
     "\n",
-    "Mauricio Tombini and Victor M. Zavala 2016 \n",
+    "Mauricio Tombini, Jordan Jalving, and Victor M. Zavala 2016 \n",
     "\n",
     "University of Wisconsin-Madison "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -58,10 +58,8 @@
     "demand[2] = 240;\n",
     "demand[3] = 0;\n",
     "\n",
-    "# assign random data\n",
-    "\n",
+    "# assign random data (set first all equal to mean forecast)\n",
     "yield = zeros(length(S),3) # yields\n",
-    "\n",
     "yield[S,1] = 2.5;\n",
     "yield[S,2] = 3.0;\n",
     "yield[S,3] = 20;"
@@ -76,38 +74,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "******************************************************************************\n",
-      "This program contains Ipopt, a library for large-scale nonlinear optimization.\n",
-      " Ipopt is released as open source code under the Eclipse Public License (EPL).\n",
-      "         For more information visit http://projects.coin-or.org/Ipopt\n",
-      "******************************************************************************\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       ":Optimal"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Model \n",
-    "\n",
     "mp = Model(solver=IpoptSolver(print_level=0))\n",
     "\n",
     "@variable(mp, x[S,P] >= 0)    # acres devoted to crops\n",
@@ -115,7 +88,6 @@
     "@variable(mp, w[S,P] >= 0)    # crops sold;\n",
     "@expression(mp, Cost[s in S], sum{prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P})\n",
     "@variable(mp, cost[s in S])\n",
-    "\n",
     "\n",
     "@constraint(mp, varcost[s in S], cost[s] == Cost[s]) \n",
     "@constraint(mp, cap[s in S], sum{x[s,j], j in P} <= 500)\n",
@@ -133,12 +105,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Solve recourse problem using deterministic first-stage solution and actual yields"
+    "Now solve recourse problem using deterministic first-stage solution and actual yields"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -149,23 +121,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       ":Optimal"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# set actual random data\n",
     "yield[1,3] = 10;\n",
     "yield[2,3] = 15;\n",
     "yield[3,3] = 20;\n",
@@ -173,7 +135,6 @@
     "yield[5,3] = 30;\n",
     "\n",
     "# Model \n",
-    "\n",
     "m = Model(solver=IpoptSolver(print_level=0))\n",
     "\n",
     "@variable(m, y[S,P] >= 0)    # crops purchase\n",
@@ -193,99 +154,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x = x: 2 dimensions:\n",
-      "[1,:]\n",
-      "  [1,1] = 120.00000279984634\n",
-      "  [1,2] = 79.99999920015239\n",
-      "  [1,3] = 300.00000299995565\n",
-      "[2,:]\n",
-      "  [2,1] = 120.00000279984634\n",
-      "  [2,2] = 79.99999920015239\n",
-      "  [2,3] = 300.00000299995565\n",
-      "[3,:]\n",
-      "  [3,1] = 120.00000279984634\n",
-      "  [3,2] = 79.99999920015239\n",
-      "  [3,3] = 300.00000299995565\n",
-      "[4,:]\n",
-      "  [4,1] = 120.00000279984634\n",
-      "  [4,2] = 79.99999920015239\n",
-      "  [4,3] = 300.00000299995565\n",
-      "[5,:]\n",
-      "  [5,1] = 120.00000279984634\n",
-      "  [5,2] = 79.99999920015239\n",
-      "  [5,3] = 300.00000299995565\n",
-      "\n",
-      "\n",
-      "y = y: 2 dimensions:\n",
-      "[1,:]\n",
-      "  [1,1] = 0.0\n",
-      "  [1,2] = 2.3798087768711324e-6\n",
-      "  [1,3] = 9.65532035803641e-9\n",
-      "[2,:]\n",
-      "  [2,1] = 0.0\n",
-      "  [2,2] = 2.3798087768711324e-6\n",
-      "  [2,3] = 9.646982445737395e-9\n",
-      "[3,:]\n",
-      "  [3,1] = 0.0\n",
-      "  [3,2] = 2.3798087768711324e-6\n",
-      "  [3,3] = 6.278599013474232e-13\n",
-      "[4,:]\n",
-      "  [4,1] = 0.0\n",
-      "  [4,2] = 2.3798087768711324e-6\n",
-      "  [4,3] = 3.280541440718195e-20\n",
-      "[5,:]\n",
-      "  [5,1] = 0.0\n",
-      "  [5,2] = 2.3798087768711324e-6\n",
-      "  [5,3] = 1.608959349234551e-20\n",
-      "\n",
-      "\n",
-      "w = w: 2 dimensions:\n",
-      "[1,:]\n",
-      "  [1,1] = 100.00000798972646\n",
-      "  [1,2] = 0.0\n",
-      "  [1,3] = 3000.000060008864\n",
-      "[2,:]\n",
-      "  [2,1] = 100.00000798972646\n",
-      "  [2,2] = 0.0\n",
-      "  [2,3] = 4500.000090008634\n",
-      "[3,:]\n",
-      "  [3,1] = 100.00000798972646\n",
-      "  [3,2] = 0.0\n",
-      "  [3,3] = 6000.000059999652\n",
-      "[4,:]\n",
-      "  [4,1] = 100.00000798972646\n",
-      "  [4,2] = 0.0\n",
-      "  [4,3] = 6000.000059999652\n",
-      "[5,:]\n",
-      "  [5,1] = 100.00000798972646\n",
-      "  [5,2] = 0.0\n",
-      "  [5,3] = 6000.000059999652\n",
-      "\n",
-      "\n",
-      "cost = cost: 1 dimensions:\n",
-      "[1] = -10600.00200367929\n",
-      "[2] = -64600.003083671065\n",
-      "[3] = -118600.00200334766\n",
-      "[4] = -118600.00200334768\n",
-      "[5] = -118600.00200334768\n",
-      "\n",
-      "\n",
-      "obj: -86200.00221947869\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Results\n",
-    "\n",
     "println(\"x = \",getvalue(x))\n",
     "println(\"\")\n",
     "println(\"y = \",getvalue(y))\n",
@@ -296,15 +171,6 @@
     "println(\"\")\n",
     "println(\"obj: \", getobjectivevalue(m))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
