--- a/UWMadison2016/stochprog/farmerws.ipynb
+++ b/UWMadison2016/stochprog/farmerws.ipynb
@@ -6,14 +6,14 @@
    "source": [
     "Farmer problem (wait-and-see policy)\n",
     "\n",
-    "Mauricio Tombini and Victor M. Zavala 2016 \n",
+    "Mauricio Tombini, Jordan Jalving, and Victor M. Zavala 2016 \n",
     "\n",
     "University of Wisconsin-Madison "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -59,11 +59,9 @@
     "demand[3] = 0;\n",
     "\n",
     "# assign random data\n",
-    "\n",
     "yield = zeros(length(S),3) # yields\n",
     "yield[S,1] = 2.5;\n",
     "yield[S,2] = 3.0;\n",
-    "\n",
     "yield[1,3] = 10;\n",
     "yield[2,3] = 15;\n",
     "yield[3,3] = 20;\n",
@@ -75,43 +73,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this problem we remove the non-anticipativity constraints"
+    "In this problem we remove the non-anticipativity constraints to simulate perfect information"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "******************************************************************************\n",
-      "This program contains Ipopt, a library for large-scale nonlinear optimization.\n",
-      " Ipopt is released as open source code under the Eclipse Public License (EPL).\n",
-      "         For more information visit http://projects.coin-or.org/Ipopt\n",
-      "******************************************************************************\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       ":Optimal"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Model \n",
-    "\n",
     "m = Model(solver=IpoptSolver(print_level=0))\n",
     "\n",
     "@variable(m, x[S,P] >= 0)    # acres devoted to crops\n",
@@ -120,13 +93,11 @@
     "@expression(m, Cost[s in S], sum{prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P})\n",
     "@variable(m, cost[s in S])\n",
     "\n",
-    "\n",
     "@constraint(m, varcost[s in S], cost[s] == Cost[s]) \n",
     "@constraint(m, cap[s in S], sum{x[s,j], j in P} <= 500)\n",
     "@constraint(m, bal[s in S,j in P], yield[s,j]*x[s,j]+y[s,j]-w[s,j] >= demand[j]) \n",
     "@constraint(m, sellb[s in S], w[s,3] <= 6000)\n",
     "@constraint(m, buyb[s in S], y[s,3] <= 0)\n",
-    "\n",
     "\n",
     "@objective(m, Min, (1/NS)*sum{cost[s], s in S})\n",
     "\n",
@@ -135,99 +106,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x: 2 dimensions:\n",
-      "[1,:]\n",
-      "  [1,1] = 420.0000058026925\n",
-      "  [1,2] = 79.99999920015239\n",
-      "  [1,3] = 0.0\n",
-      "[2,:]\n",
-      "  [2,1] = 79.99999920245911\n",
-      "  [2,2] = 79.99999920012897\n",
-      "  [2,3] = 340.00000659736713\n",
-      "[3,:]\n",
-      "  [3,1] = 120.00000280082533\n",
-      "  [3,2] = 79.99999920015239\n",
-      "  [3,3] = 300.0000029989767\n",
-      "[4,:]\n",
-      "  [4,1] = 180.00000340058205\n",
-      "  [4,2] = 79.99999920015239\n",
-      "  [4,3] = 240.00000239922\n",
-      "[5,:]\n",
-      "  [5,1] = 220.00000380042712\n",
-      "  [5,2] = 79.99999920015239\n",
-      "  [5,3] = 200.0000019993749\n",
-      "\n",
-      "\n",
-      "y: 2 dimensions:\n",
-      "[1,:]\n",
-      "  [1,1] = 0.0\n",
-      "  [1,2] = 0.0\n",
-      "  [1,3] = 9.752086119058693e-9\n",
-      "[2,:]\n",
-      "  [2,1] = 0.0\n",
-      "  [2,2] = 0.0\n",
-      "  [2,3] = 9.714578177618196e-9\n",
-      "[3,:]\n",
-      "  [3,1] = 0.0\n",
-      "  [3,2] = 0.0\n",
-      "  [3,3] = 9.580169952360632e-9\n",
-      "[4,:]\n",
-      "  [4,1] = 0.0\n",
-      "  [4,2] = 0.0\n",
-      "  [4,3] = 9.227902637280718e-9\n",
-      "[5,:]\n",
-      "  [5,1] = 0.0\n",
-      "  [5,2] = 0.0\n",
-      "  [5,3] = 8.765825074884802e-9\n",
-      "\n",
-      "\n",
-      "w: 2 dimensions:\n",
-      "[1,:]\n",
-      "  [1,1] = 850.0000164968418\n",
-      "  [1,2] = 0.0\n",
-      "  [1,3] = 0.0\n",
-      "[2,:]\n",
-      "  [2,1] = 0.0\n",
-      "  [2,2] = 0.0\n",
-      "  [2,3] = 5100.000098979874\n",
-      "[3,:]\n",
-      "  [3,1] = 100.00000899217387\n",
-      "  [3,2] = 0.0\n",
-      "  [3,3] = 6000.000059998646\n",
-      "[4,:]\n",
-      "  [4,1] = 250.00001049156566\n",
-      "  [4,2] = 0.0\n",
-      "  [4,3] = 6000.000059999142\n",
-      "[5,:]\n",
-      "  [5,1] = 350.00001149117827\n",
-      "  [5,2] = 0.0\n",
-      "  [5,3] = 6000.000059999311\n",
-      "\n",
-      "\n",
-      "cost: 1 dimensions:\n",
-      "[1] = -63100.002121413265\n",
-      "[2] = -64800.002153889465\n",
-      "[3] = -118600.00267570352\n",
-      "[4] = -150700.0029965912\n",
-      "[5] = -172100.0032105144\n",
-      "\n",
-      "\n",
-      "obj: -113860.00263162237\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Results\n",
-    "\n",
     "println(getvalue(x))\n",
     "println(\"\")\n",
     "println(getvalue(y))\n",
@@ -238,24 +123,6 @@
     "println(\"\")\n",
     "println(\"obj: \", getobjectivevalue(m))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
