--- a/UWMadison2016/stochprog/README
+++ b/UWMadison2016/stochprog/README
@@ -1,1 +1,5 @@
+Victor M. Zavala
+Univestiy of Wisconsin-Madison 2016
 
+This directory contains tutorial examples 
+on the use of stochastic programing techniques
