--- a/UWMadison2016/stochprog/ex1gauss.ipynb
+++ b/UWMadison2016/stochprog/ex1gauss.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Example on How Objectives and Constraints Distort Probability Distributions\n",
+    "\n",
     "Mauricio Tombini, Jordan Jalving, and Victor M. Zavala 2016 \n",
     "\n",
     "University of Wisconsin-Madison "
