--- a/UWMadison2016/stochprog/farmer-probconstraint.ipynb
+++ b/UWMadison2016/stochprog/farmer-probconstraint.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Farmer Problem with Probabilistic Constraints \n",
+    "Farmer Problem with Probabilistic Constraints and Conservative Approximations (CVar and SVar) \n",
     "\n",
     "Mauricio Tombini and Victor M. Zavala 2016 \n",
     "\n",
@@ -122,16 +122,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "collapsed": false
    },
    "outputs": [],
@@ -187,7 +177,7 @@
    },
    "outputs": [],
    "source": [
-    "# Model (with sigmoid approximation)\n",
+    "# Model (with sigmoid approximation SVar)\n",
     "b= 10\n",
     "c= 1e-3\n",
     "\n",
