--- a/UWMadison2016/stochprog/farmercvar.ipynb
+++ b/UWMadison2016/stochprog/farmercvar.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -25,11 +25,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Model parameters\n",
     "\n",
@@ -75,11 +86,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "******************************************************************************\n",
+      "This program contains Ipopt, a library for large-scale nonlinear optimization.\n",
+      " Ipopt is released as open source code under the Eclipse Public License (EPL).\n",
+      "         For more information visit http://projects.coin-or.org/Ipopt\n",
+      "******************************************************************************\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       ":Optimal"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Model \n",
     "m = Model(solver=IpoptSolver(print_level=0))\n",
@@ -107,11 +142,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: 2 dimensions:\n",
+      "[1,:]\n",
+      "  [1,1] = 220.00000379973474\n",
+      "  [1,2] = 79.99999920015239\n",
+      "  [1,3] = 200.00000200006727\n",
+      "[2,:]\n",
+      "  [2,1] = 220.00000379973474\n",
+      "  [2,2] = 79.99999920015239\n",
+      "  [2,3] = 200.00000200006727\n",
+      "[3,:]\n",
+      "  [3,1] = 220.00000379973474\n",
+      "  [3,2] = 79.99999920015239\n",
+      "  [3,3] = 200.00000200006727\n",
+      "[4,:]\n",
+      "  [4,1] = 220.00000379973474\n",
+      "  [4,2] = 79.99999920015239\n",
+      "  [4,3] = 200.00000200006727\n",
+      "[5,:]\n",
+      "  [5,1] = 220.00000379973474\n",
+      "  [5,2] = 79.99999920015239\n",
+      "  [5,3] = 200.00000200006727\n",
+      "\n",
+      "\n",
+      "y: 2 dimensions:\n",
+      "[1,:]\n",
+      "  [1,1] = 0.0\n",
+      "  [1,2] = 0.0\n",
+      "  [1,3] = 0.0\n",
+      "[2,:]\n",
+      "  [2,1] = 0.0\n",
+      "  [2,2] = 0.0\n",
+      "  [2,3] = 0.0\n",
+      "[3,:]\n",
+      "  [3,1] = 0.0\n",
+      "  [3,2] = 0.0\n",
+      "  [3,3] = 0.0\n",
+      "[4,:]\n",
+      "  [4,1] = 0.0\n",
+      "  [4,2] = 0.0\n",
+      "  [4,3] = 0.0\n",
+      "[5,:]\n",
+      "  [5,1] = 0.0\n",
+      "  [5,2] = 0.0\n",
+      "  [5,3] = 0.0\n",
+      "\n",
+      "\n",
+      "w: 2 dimensions:\n",
+      "[1,:]\n",
+      "  [1,1] = 350.0000114894474\n",
+      "  [1,2] = 0.0\n",
+      "  [1,3] = 2000.000020000325\n",
+      "[2,:]\n",
+      "  [2,1] = 350.0000114894474\n",
+      "  [2,2] = 0.0\n",
+      "  [2,3] = 3000.000030000662\n",
+      "[3,:]\n",
+      "  [3,1] = 350.0000114894474\n",
+      "  [3,2] = 0.0\n",
+      "  [3,3] = 4000.000040000998\n",
+      "[4,:]\n",
+      "  [4,1] = 350.0000114894474\n",
+      "  [4,2] = 0.0\n",
+      "  [4,3] = 5000.000050001334\n",
+      "[5,:]\n",
+      "  [5,1] = 350.00001148944745\n",
+      "  [5,2] = 0.0\n",
+      "  [5,3] = 6000.000059999594\n",
+      "\n",
+      "\n",
+      "cost: 1 dimensions:\n",
+      "[1] = -28100.001770180508\n",
+      "[2] = -64100.00213019263\n",
+      "[3] = -100100.00249020476\n",
+      "[4] = -136100.0028502168\n",
+      "[5] = -172100.00321015422\n",
+      "\n",
+      "\n",
+      "obj: -100100.00249018724\n"
+     ]
+    }
+   ],
    "source": [
     "# Results\n",
     "println(getvalue(x))\n",
