--- a/UWMadison2016/stochprog/ex1gausspyplot.ipynb
+++ b/UWMadison2016/stochprog/ex1gausspyplot.ipynb
@@ -23,8 +23,7 @@
     "using JuMP \n",
     "using Distributions \n",
     "using Ipopt\n",
-    "using PyPlot\n",
-    "set_default_plot_size(20cm, 15cm)"
+    "using PyPlot"
    ]
   },
   {
@@ -257,7 +256,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Julia 0.4.6",
+   "display_name": "Julia 0.4.5",
    "language": "julia",
    "name": "julia-0.4"
   },
