--- a/UWMadison2016/stochprog/farmerinferencepyplot.ipynb
+++ b/UWMadison2016/stochprog/farmerinferencepyplot.ipynb
@@ -356,8 +356,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Julia 0.4.6",
+   "display_name": "Julia 0.4.5",
    "language": "julia",
    "name": "julia-0.4"
   },
