--- a/UWMadison2016/stochprog/ex1gaussfullpyplot.ipynb
+++ b/UWMadison2016/stochprog/ex1gaussfullpyplot.ipynb
@@ -289,8 +289,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Julia 0.4.6",
+   "display_name": "Julia 0.4.5",
    "language": "julia",
    "name": "julia-0.4"
   },
@@ -298,7 +299,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.4.6"
+   "version": "0.4.5"
   }
  },
  "nbformat": 4,
