--- a/UWMadison2016/stochprog/ex1gaussfullpyplot.ipynb
+++ b/UWMadison2016/stochprog/ex1gaussfullpyplot.ipynb
@@ -13,11 +13,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO: Precompiling module PyPlot...\n",
+      "\n",
+      "signal (11): Segmentation fault: 11\n",
+      "PyObject_Call at /System/Library/Frameworks/Python.framework/Versions/2.7/Python (unknown line)\n",
+      "unknown function (ip: 0x314e6f760)\n",
+      "unknown function (ip: 0x314e6e57e)\n",
+      "unknown function (ip: 0x314e6e0f3)\n",
+      "unknown function (ip: 0x314e6e026)\n",
+      "jl_apply_generic at /opt/local/lib/julia/libjulia.dylib (unknown line)\n",
+      "unknown function (ip: 0x314e2c178)\n",
+      "unknown function (ip: 0x314e2c020)\n",
+      "unknown function (ip: 0x314e0f249)\n",
+      "unknown function (ip: 0x314e0f020)\n",
+      "unknown function (ip: 0x314e0d1e6)\n",
+      "unknown function (ip: 0x314e0d055)\n",
+      "unknown function (ip: 0x314e0d01b)\n",
+      "jl_apply_generic at /opt/local/lib/julia/libjulia.dylib (unknown line)\n",
+      "unknown function (ip: 0x314e070d6)\n",
+      "unknown function (ip: 0x314e0528e)\n",
+      "jl_apply_generic at /opt/local/lib/julia/libjulia.dylib (unknown line)\n",
+      "unknown function (ip: 0x314e040d6)\n",
+      "jl_apply_generic at /opt/local/lib/julia/libjulia.dylib (unknown line)\n",
+      "_start at /opt/local/lib/julia/sys.dylib (unknown line)\n",
+      "jlcall__start_18571 at /opt/local/lib/julia/sys.dylib (unknown line)\n",
+      "jl_apply_generic at /opt/local/lib/julia/libjulia.dylib (unknown line)\n",
+      "true_main at /opt/local/bin/julia (unknown line)\n",
+      "main at /opt/local/bin/julia (unknown line)\n"
+     ]
+    },
+    {
+     "ename": "LoadError",
+     "evalue": "LoadError: Failed to precompile PyPlot to /Users/vzavala/.julia/lib/v0.4/PyPlot.ji\nwhile loading In[1], in expression starting on line 5",
+     "output_type": "error",
+     "traceback": [
+      "LoadError: Failed to precompile PyPlot to /Users/vzavala/.julia/lib/v0.4/PyPlot.ji\nwhile loading In[1], in expression starting on line 5",
+      "",
+      " in error at /opt/local/lib/julia/sys.dylib",
+      " in compilecache at ./loading.jl:400",
+      " in require at /opt/local/lib/julia/sys.dylib"
+     ]
+    }
+   ],
    "source": [
     "# Loading packages:\n",
     "using JuMP \n",
@@ -40,7 +86,8 @@
     "srand(0)\n",
     "μ = 0; σ = 2; \n",
     "d = Normal(μ,σ)\n",
-    "R = rand(d,NS);"
+    "R = rand(d,NS);\n",
+    "Rmean = (1/NS)*sum(R)"
    ]
   },
   {
@@ -157,6 +204,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# solve deterministic problem with mean data\n",
+    "mmean = Model(solver=IpoptSolver(print_level=0))\n",
+    "@variable(mmean, xdet)      # decision variable\n",
+    "@variable(mmean, cost)   # cost\n",
+    "@constraint(mmean, costeq, cost == (xdet-Rmean)^2) \n",
+    "@objective(mean, Min, (1/NS)*sum{cost[s], s in S})\n",
+    "solve(mean)\n",
+    "\n",
+    "# now evaluate cost for deterministic solution using all scenarios\n",
+    "@constraint(m, fix_x, x==getvalue(xdet)) \n",
+    "solve(m)\n",
+    "solcost3 = getvalue(cost);\n",
+    "println(\"x=\",getvalue(x))\n",
+    "println(\"mean=\",getobjectivevalue(m))\n",
+    "println(\"meanR=\",(1/NS)*sum(R))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Plotting cost fistribution \n",
+    "plt[:hist](solcost3,bins = 30)\n",
+    "grid(\"on\")\n",
+    "xlabel(L\"f(x^*(\\xi),\\xi)\")\n",
+    "ylabel(L\"p(f(\\cdot))\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -237,54 +324,6 @@
     "grid(\"on\")\n",
     "xlabel(L\"f(x^*(\\xi),\\xi)\")\n",
     "ylabel(L\"p(f(\\cdot))\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "100-element Array{Float64,1}:\n",
-       "  1.98206  \n",
-       "  2.91203  \n",
-       "  0.430827 \n",
-       "  0.0484294\n",
-       "  1.49542  \n",
-       "  0.415139 \n",
-       "  0.0322332\n",
-       "  0.0283565\n",
-       "  0.95801  \n",
-       " 10.2291   \n",
-       "  1.76404  \n",
-       "  2.17848  \n",
-       "  0.713359 \n",
-       "  ⋮        \n",
-       "  0.159064 \n",
-       "  8.91362  \n",
-       "  0.870091 \n",
-       " 11.5833   \n",
-       "  0.277311 \n",
-       " 21.8764   \n",
-       "  0.0130099\n",
-       "  7.42689  \n",
-       "  6.19464  \n",
-       "  5.7317   \n",
-       "  0.317498 \n",
-       "  2.71941  "
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "solcost"
    ]
   }
  ],
