--- a/UWMadison2016/stochprog/ex1gausspyplot.ipynb
+++ b/UWMadison2016/stochprog/ex1gausspyplot.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "Example on How Objectives and Constraints Distort Probability Distributions\n",
     "\n",
-    "Mauricio Tombini, Jordan Jalving, and Victor M. Zavala 2016 \n",
+    "Mauricio Tombini, Jordan Jalving, and Victor M. Zavala \n",
     "\n",
-    "University of Wisconsin-Madison "
+    "University of Wisconsin-Madison, 2016"
    ]
   },
   {
@@ -34,7 +34,8 @@
    },
    "outputs": [],
    "source": [
-    "# Generate random data: \n",
+    "# Generate random data:\n",
+    "# Greek chracters (e.g., \\mu and then hitting tab key)\n",
     "N = 1000\n",
     "srand(0)\n",
     "μ = 0; σ = 2; \n",
@@ -73,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ex1Gauss"
+    "## Ex1 Gauss "
    ]
   },
   {
@@ -84,7 +85,7 @@
    },
    "outputs": [],
    "source": [
-    "# ex1gauss.mod \n",
+    "# declare function that solves optimization model using input data\n",
     "function ex1GaussModel(xip)\n",
     "    m = Model(solver=IpoptSolver(print_level=0))\n",
     "    @variable(m, x)\n",
@@ -98,7 +99,6 @@
     "# solve problems with data points\n",
     "solex1gauss = zeros(N)\n",
     "solxex1gauss = zeros(N)\n",
-    "\n",
     "for i=1:N \n",
     "    (solex1gauss[i], solxex1gauss[i]) = ex1GaussModel(R[i])\n",
     "end "
@@ -174,24 +174,20 @@
    },
    "outputs": [],
    "source": [
-    "# ex1gausscons.mod\n",
-    "\n",
+    "# define new model but now with constraints\n",
     "function ex1GaussConsModel(xip)\n",
     "    m = Model(solver=IpoptSolver(print_level=0))\n",
     "    @variable(m, -1 <= x <= 1)\n",
     "    @objective(m, Min, (x-xip)^2 - x*xip)\n",
-    "    \n",
     "    solve(m)\n",
     "    obj = getobjectivevalue(m)\n",
     "    x = getvalue(x)\n",
-    "    \n",
     "    return obj,x\n",
     "end\n",
     "        \n",
     "# solve problems with data points\n",
     "solex1gausscons = zeros(N)\n",
     "solxex1gausscons = zeros(N)\n",
-    "\n",
     "for i=1:N \n",
     "    (solex1gausscons[i], solxex1gausscons[i]) = ex1GaussConsModel(R[i])\n",
     "end "
@@ -264,7 +260,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.4.6"
+   "version": "0.4.5"
   }
  },
  "nbformat": 4,
