--- a/UWMadison2016/stochprog/README
+++ b/UWMadison2016/stochprog/README
@@ -2,4 +2,4 @@ Victor M. Zavala
 Univestiy of Wisconsin-Madison 2016
 
 This directory contains tutorial examples 
-on the use of stochastic programing techniques
+on the use of stochastic programming techniques
