--- a/Dow2016/stochprog/README
+++ b/Dow2016/stochprog/README
@@ -1,5 +1,5 @@
 Victor M. Zavala
-Univestiy of Wisconsin-Madison 2016
+University of Wisconsin-Madison 2016
 
 This directory contains tutorial examples 
 on the use of stochastic programming techniques
