--- a/Valladolid2017/StochNLP/StochPIDTuning.ipynb
+++ b/Valladolid2017/StochNLP/StochPIDTuning.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -157,13 +159,7 @@
       "Total CPU secs in IPOPT (w/o function evaluations)   =      0.349\n",
       "Total CPU secs in NLP function evaluations           =      0.022\n",
       "\n",
-      "EXIT: Optimal Solution Found.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "EXIT: Optimal Solution Found.\n",
       "4.3186135416788645\n",
       "2.2479018673730606\n",
       "-3.100891328572732\n"
@@ -171,10 +167,14 @@
     }
    ],
    "source": [
+    "# optimal PID controller tuning in JuMP\n",
+    "# Victor M. Zavala\n",
+    "# UW-Madison, 2017\n",
+    "\n",
     "# call libraries\n",
     "using Ipopt\n",
     "using JuMP\n",
-    "using Gadfly\n",
+    "#using Gadfly\n",
     "\n",
     "# sets\n",
     "NS=3;\n",
@@ -265,7 +265,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2293,13 +2295,15 @@
     }
    ],
    "source": [
-    "plot(x=T, y=x[1,:]')"
+    "#plot(x=T, y=x[1,:]')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -4299,13 +4303,15 @@
     }
    ],
    "source": [
-    "plot(x=T, y=x[2,:]')"
+    "#plot(x=T, y=x[2,:]')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -6333,7 +6339,7 @@
     }
    ],
    "source": [
-    "plot(x=T, y=x[3,:]')"
+    "#plot(x=T, y=x[3,:]')"
    ]
   },
   {
@@ -6347,6 +6353,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Julia 0.4.5",
    "language": "julia",
